--- a/packages/ui/src/components/LoaderBackdrop/styles.css
+++ b/packages/ui/src/components/LoaderBackdrop/styles.css
@@ -16,7 +16,7 @@ body {
   transform: translateY(-50%);
   top: 50%;
   position: absolute;
-  width: calc(100% - 200px);
+  width: 100%;
   color: #00b8de;
   padding: 0 100px;
   text-align: center;
