--- a/packages/ui/src/components/Loader/styles.css
+++ b/packages/ui/src/components/Loader/styles.css
@@ -4,25 +4,14 @@ body {
   background: #fff;
 }
 
-.cs-loader-backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-
-.cs-loader-backdrop-inner {
+.cs-loader {
   transform: translateY(-50%);
-  top: 50%;
-  position: absolute;
-  width: 100%;
   color: #00b8de;
   padding: 0 100px;
   text-align: center;
 }
 
-.cs-loader-backdrop-inner label {
+.cs-loader-inner label {
   font-size: 20px;
   opacity: 0;
   display: inline-block;
@@ -66,22 +55,22 @@ body {
   }
 }
 
-.cs-loader-backdrop-inner label:nth-child(4) {
+.cs-loader-inner label:nth-child(4) {
   -webkit-animation: lol 3s 200ms infinite ease-in-out;
   animation: lol 3s 200ms infinite ease-in-out;
 }
 
-.cs-loader-backdrop-inner label:nth-child(3) {
+.cs-loader-inner label:nth-child(3) {
   -webkit-animation: lol 3s 300ms infinite ease-in-out;
   animation: lol 3s 300ms infinite ease-in-out;
 }
 
-.cs-loader-backdrop-inner label:nth-child(2) {
+.cs-loader-inner label:nth-child(2) {
   -webkit-animation: lol 3s 400ms infinite ease-in-out;
   animation: lol 3s 400ms infinite ease-in-out;
 }
 
-.cs-loader-backdrop-inner label:nth-child(1) {
+.cs-loader-inner label:nth-child(1) {
   -webkit-animation: lol 3s 500ms infinite ease-in-out;
   animation: lol 3s 500ms infinite ease-in-out;
 }
